// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelRepositoryLocationList matches snapshot with all items 1`] = `
<Memo(DndContext)
  collisionDetection={[Function]}
  onDragEnd={[Function]}
  sensors={
    Array [
      Object {
        "options": Object {},
        "sensor": [Function],
      },
      Object {
        "options": Object {
          "coordinateGetter": [Function],
        },
        "sensor": [Function],
      },
    ]
  }
>
  <SortableContext
    items={
      Array [
        "PUBLIC",
        "CONFIGURABLE",
        "LOCAL",
        "DMR",
      ]
    }
  >
    <div
      className="location-list"
    >
      <SortableItem
        index={0}
        item={
          Object {
            "repositoryLocationType": "PUBLIC",
            "value": "",
          }
        }
        key="PUBLIC"
      />
      <SortableItem
        index={1}
        item={
          Object {
            "repositoryLocationType": "CONFIGURABLE",
            "value": "test.com",
          }
        }
        key="CONFIGURABLE"
      />
      <SortableItem
        index={2}
        item={
          Object {
            "repositoryLocationType": "LOCAL",
            "value": "d:/myModels",
          }
        }
        key="LOCAL"
      />
      <SortableItem
        index={3}
        item={
          Object {
            "repositoryLocationType": "DMR",
            "value": "c:/dtmi",
          }
        }
        key="DMR"
      />
    </div>
  </SortableContext>
</Memo(DndContext)>
`;

exports[`ModelRepositoryLocationList matches snapshot with no items 1`] = `
<Memo(DndContext)
  collisionDetection={[Function]}
  onDragEnd={[Function]}
  sensors={
    Array [
      Object {
        "options": Object {},
        "sensor": [Function],
      },
      Object {
        "options": Object {
          "coordinateGetter": [Function],
        },
        "sensor": [Function],
      },
    ]
  }
>
  <SortableContext
    items={Array []}
  >
    <div
      className="location-list"
    />
  </SortableContext>
</Memo(DndContext)>
`;
